# claude-code-mcp-controller

./: .gitignore  CHATGPT_LOCAL_TESTING.md  CLAUDE.md  DEVELOPER_FEEDBACK.md  FASTMCP_CLOUD_DEPLOYMENT.md  IMPLEMENTATION_VALIDATION.md  LICENSE  LOCAL_TESTING_GUIDE.md  Makefile  README.md  config.py  env.example  mock_fastmcp.py  pattern_validation.py  pyproject.toml  requirements.txt  server.py  start_local_chatgpt_test.sh  start_mcp_server.py  test_client.py  test_http_direct.py
deploy/: Dockerfile  README.md  fastmcp-cloud.yml
docs/: quick-wins-implementation.md  usage-examples.md  ux-analysis-report.md
scripts/: mock-claude-code.py  test-local.py  user-journey-tests.py
supervisor/: __init__.py  claude_wrapper.py  main.py  session_manager.py
tests/: __init__.py  test_supervisor.py
