[project]
name = "claude-code-mcp-controller"
version = "0.1.0"
description = "FastMCP server for controlling Claude-Code sessions remotely via ChatGPT"
requires-python = ">=3.10"

dependencies = [
    "fastmcp>=2.12.4",
    "pexpect>=4.8.0",
    "psutil>=5.9.0",
    "aiohttp>=3.8.0",
    "aiohttp-cors>=0.7.0",
    "structlog>=23.1.0",
    "prometheus-client>=0.17.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]